#710 fix single bulk update checkbox redirecting on firefox

--- a/features/DeficientItems/StateGroups/List/Item/styles.module.scss
+++ b/features/DeficientItems/StateGroups/List/Item/styles.module.scss
@@ -14,6 +14,7 @@
   display: flex;
   flex-direction: column;
   padding: $global-sm-padding $global-padding;
+  cursor: pointer;
 
   @include media-query(desktop) {
     flex-direction: row-reverse;
